public/styles/main.css
html {
  font-size: 16px;
  line-height: 1.5em;
}

body {
  font-family: "myriad-pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
  background: #fff;
  color: #444;
}

table {
  width: 100%;
  border-collapse: collapse;
}

    th,
    td {
      padding: .5em .75em;
      border: 1px solid #ccc;
      vertical-align: top;
    }

    th {
      background: #fff;
      border-bottom: 2px solid #999;
      text-align: left;
    }

h1 {
  font-size: 4em;
  line-height: 1.5em;
  text-align: center;
}

h2 {
  font-size: 1.75em;
  line-height: 1.5em;
  margin-top: 2em;
}

a {
  color: #0094ce;
}

  a:hover,
  a:focus {
    color: #FF9900;
  }
  
  a:active {
    position: relative;
    top: 1px;
  }

.container {
  width: 90%;
  margin: 4em auto;
}

   .logo {
     font-size: 1em;
     line-height: 1.5em;
     background: url("../images/logo.png") center top no-repeat;
     width: 240px;
     height: 148px;
     margin: 0 auto 2em auto;
     background-color: transparent;
     border: 0;
     overflow: hidden;
     *text-indent: -9999px;
   }

     .logo:before {
       content: "";
       display: block;
       width: 0;
       height: 150%;
     }

   .copyright {
     margin-top: 4em;
   }

@media screen and (min-width: 620px) {
  .container {
    width: 580px;
  }
}

